<?xml version="1.0"?>
<package format="3">
  <name>gz_led_plugin</name>
  <version>0.1.0</version>
  <description>
    A Gazebo system plugin for simulating LED systems using lights and visuals.
  </description>

  <maintainer email="jasmeet0915@gmail.com">Jasmeet Singh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz-sim</depend>
  <depend>gz-math</depend>
  <depend>gz-msgs</depend>
  <depend>gz-plguin</depend>
  <depend>gz-transport</depend>

  <exec_depend>ament_environment_hooks</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
